# audioRevolution

./: README.md  angular.json  capacitor.config.ts  package-lock.json  package.json  tsconfig.app.json
android/: build.gradle  variables.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/audiorevolution/app/: AudioEnginePlugin.kt  MainActivity.java
android/app/src/main/res/values/: strings.xml
audioRevolutionKotlin/: settings.gradle.kts
audioRevolutionKotlin/app/: build.gradle.kts
audioRevolutionKotlin/app/src/main/: AndroidManifest.xml
audioRevolutionKotlin/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
audioRevolutionKotlin/app/src/main/java/com/audiorevolution/: MainActivity.kt
audioRevolutionKotlin/app/src/main/java/com/audiorevolution/data/: Models.kt
audioRevolutionKotlin/app/src/main/java/com/audiorevolution/service/: AudioEngine.kt  MidiService.kt
audioRevolutionKotlin/app/src/main/java/com/audiorevolution/ui/: AudioViewModel.kt
audioRevolutionKotlin/app/src/main/res/values/: strings.xml  themes.xml
public/: manifest.webmanifest  spessasynth_processor.min.js
src/: index.html  styles.css
src/app/: app.component.ts
src/app/core/plugins/: audio-engine.plugin.ts
src/app/services/: audio.service.ts  midi.service.ts
